Fixed Buttons and Calendar Alignments

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -85,6 +85,9 @@
       .fw-item{
           width: 49%;
       }
+      .w-100{
+          width: 100%;
+      }
   }
   .salesman-select{
       .input-group-append{
